--- a/api/package.json
+++ b/api/package.json
@@ -20,9 +20,9 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "helmet": "^7.1.0",
-    "multer": "^1.4.5-lts.1",
+    "express": "^4.21.0",
+    "helmet": "^8.0.0",
+    "multer": "^2.0.2",
     "pdf-lib": "^1.17.1",
     "sharp": "^0.33.2"
   },
